--- a/NaviMap/app/src/main/res/values/strings.xml
+++ b/NaviMap/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
-    <string name="app_name">NaviMap v0.1</string>
+    <string name="app_name">NaviMap</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Выход</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="action_exit">Выход</string>
 </resources>
