--- a/NaviMap/app/src/main/res/values/strings.xml
+++ b/NaviMap/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
 
     <string name="title_activity_maps">Map</string>
     <string name="action_exit">Выход</string>
+    <string name="reg_loginText">Enter login</string>
 </resources>
