--- a/NaviMap/app/src/main/res/values/strings.xml
+++ b/NaviMap/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
     <string name="app_name">NaviMap</string>
     <string name="title_activity_maps">NaviMap</string>
-    <string name="closeRegForm_ButtonText">Close</string>
+    <string name="closeForm_ButtonText">Close</string>
     <string name="sign_upText">Sign up</string>
     <string name="sign_inText">Sign in</string>
-    <string name="already_signed_upText">Already signed up?</string>
+    <string name="already_signed_upText">Already signed up? </string>
     <string name="loginText">Login</string>
     <string name="passwordText">Password</string>
+    <string name="enterText">Enter login and password: </string>
     
     <string name="menu_cinema">Кинотеатр</string>
     <string name="menu_shop">Магазин</string>
