Update — маркер для местоположения
- Определение местоположения через пункт в меню
- Переход по координатам
- Установка маркера

--- a/NaviMap/app/src/main/res/values/strings.xml
+++ b/NaviMap/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="menu_gs">Заправка</string>
     <string name="menu_pharmacy">Аптека</string>
     <string name="menu_hospital">Больница</string>
+    <string name="menu_location">Моё местоположение</string>>
 </resources>
